--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </li>
       <li>
         <a href="https://twitter.com/"
-          target ="_blank">🐦 Twitter</a>
+          target ="_blank">🐤 Twitter</a>
       </li>
     </ul>
     
